examples/test/testpolicy11020.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11020
  namespace: namespace157
spec:
  podSelector:
    matchLabels:
      key27: value43
      key18: value9
      key39: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value15
          key15: value39
          key25: value22
